Wersja 0.8.6 (logowanie google)

--- a/Zaczy.SongBook.MAUI/Pages/CategoriesPage.xaml
+++ b/Zaczy.SongBook.MAUI/Pages/CategoriesPage.xaml
@@ -13,7 +13,7 @@
     <ContentPage.ToolbarItems>
         <!-- ToolbarItem does not inherit the page BindingContext, use x:Reference to the page -->
         <ToolbarItem 
-            Text="Pobierz"
+            Text="Odśwież"
             BindingContext="{x:Reference Root}"
             Command="{Binding FetchCategoriesCommand}"
             Order="Primary"
